--- a/_config.yml
+++ b/_config.yml
@@ -10,17 +10,16 @@
 ############################
 
 # Name of website
-title: My Website
-
+title: Lathashree's world
 # Your name to show in the footer
-author: Some Person
+author: Lathashree Harisha
 
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  About Me: "about me"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
@@ -50,16 +49,11 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+  email: "lathashree.study@gmail.com"
+  github: lathashree01
 #  medium: yourname
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: lathashree-harisha
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -80,9 +74,6 @@ social-network-links:
 #  hackerrank: yourname
 #  gitlab: yourname
 
-# If you want your website to generate an RSS feed, provide a description
-# The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
 
 ###########################
 # --- General options --- #
